--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "## Description",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
+    
   },
   "repository": {
     "type": "git",
