--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js"
-    
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "gitignore": "^0.6.0",
     "nodemon": "^1.19.1"
   }
 }
